# chorus-lite

./: .env.example  AGENTS.md  CONTRIBUTING.md  README.md  add_paths.sh  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py
alembic/versions/: 984548832e56_baseline_migration.py
config/: agents.yaml
docs/: status.md  tech-docs.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pgvector-init.sql/: 01-pgvector-init.sql
scripts/: generate_schemas.py  init_db.py
src/chorus/: __init__.py  bootstrap.py
src/chorus/agents/: __init__.py  base.py  graph_node_utils.py  integration_manager.py  scene_generator.py  story_architect.py
src/chorus/canon/: __init__.py  crud.py  db.py  models.py  postgres.py  queries.py
src/chorus/config/: __init__.py  config.py
src/chorus/core/: __init__.py  cache.py  communication.py  embedding.py  env.py  llm.py  logging.py  logs.py  name_utils.py  output_utils.py  queue.py
src/chorus/langgraph/: __init__.py  checkpointer.py  error_handling.py  error_recovery.py  errors.py  graph.py  integration.py  memory.py  nodes.py  orchestrator.py  session_utils.py  state.py  versioning.py
src/chorus/models/: __init__.py  approval_log.py  base.py  base_model.py  chapter.py  concept.py  configuration.py  continuity_feedback.py  entity.py  evidence.py  mixins.py  responses.py  sqlalchemy_models.py  story_feedback.py  style_feedback.py  user_input.py  validators.py  world_anvil.py  world_item.py
src/chorus/models/character/: __init__.py  location.py  profile.py  relationship.py
src/chorus/models/story/: __init__.py  evaluation.py  outline.py  scene.py  story_idea.py
src/chorus/models/task/: __init__.py  queue.py
src/chorus/web/: main.py  routes.py  websocket.py
src/chorus/web/static/css/: style.css
src/chorus/web/static/js/: app.js
src/chorus/web/templates/: index.html
